[package]
name = "svm40"
version = "0.0.2"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SVM40 sensor."
readme = "README.md"
repository = "https://github.com/mjaakkol/svm40-rs"
keywords = ["svm40", "sensirion", "driver", "tvoc", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensirion-i2c = "0.1"
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
